--- a/index.html
+++ b/index.html
@@ -412,5 +412,84 @@
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="./script/script.js"></script>
+<script src="./plugins/validator/validator.js"></script>
+<script>
+        const valid1 = new Validator({
+            selector: '#form1',
+            pattern: {
+                userName: /^[а-я]+$/gi,
+				phone: /^\+?[78]([-()]*\d){10}$/,
+				email: /^\w+@\w+\.\w{2,}$/gi,
+            },
+            method: {
+				'form1-phone': [
+                    ['notEmpty'],
+                    ['pattern', 'phone']
+                ],
+                'form1-email': [
+                    ['notEmpty'],
+                    ['pattern', 'email']
+                ],
+                'form1-name': [
+                    ['notEmpty'],
+                    ['pattern', 'userName']
+                ]
+            }
+        });
+        valid1.init();
+
+		const valid2 = new Validator({
+            selector: '#form2',
+            pattern: {
+                userName: /^[а-я]+$/gi,
+                userMessage: /^[а-я]+$/,
+				phone: /^\+?[78]([-()]*\d){10}$/,
+				email: /^\w+@\w+\.\w{2,}$/gi,
+            },
+            method: {
+				'form2-phone': [
+                    ['notEmpty'],
+                    ['pattern', 'phone']
+                ],
+                'form2-email': [
+                    ['notEmpty'],
+                    ['pattern', 'email']
+                ],
+                'form2-name': [
+                    ['notEmpty'],
+                    ['pattern', 'userName']
+                ],
+				'form2-message': [
+                    ['notEmpty'],
+                    ['pattern', 'userMessage']
+                ]
+            }
+        });
+        valid2.init();
+
+		const valid3 = new Validator({
+            selector: '#form3',
+            pattern: {
+                userName: /^[а-я]+$/gi,
+				phone: /^\+?[78]([-()]*\d){10}$/,
+				email: /^\w+@\w+\.\w{2,}$/gi,
+            },
+            method: {
+				'form3-phone': [
+                    ['notEmpty'],
+                    ['pattern', 'phone']
+                ],
+                'form3-email': [
+                    ['notEmpty'],
+                    ['pattern', 'email']
+                ],
+                'form3-name': [
+                    ['notEmpty'],
+                    ['pattern', 'userName']
+                ]
+            }
+        });
+        valid3.init();
+    </script>
 </body>
 </html>
