--- a/index.html
+++ b/index.html
@@ -411,6 +411,6 @@
 	</div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="dist\main.js"></script>
+<script src="dist\bundle.js"></script>
 </body>
 </html>
