--- a/index.html
+++ b/index.html
@@ -411,9 +411,9 @@
 	</div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<!--
+
 <script src="./dist/bundle.js"></script>
--->
-<script src="./dist/dev-bundle.js"></script>
+
+<!-- <script src="./dist/dev-bundle.js"></script> -->
 </body>
 </html>
