--- a/index.html
+++ b/index.html
@@ -415,5 +415,31 @@
 <script src="./dist/bundle.js"></script> -->
 
 <script src="./dist/dev-bundle.js"></script>
+<script src="./src/modules/sliderCarousel.js"></script>
+<script>
+
+	const carousel = new SliderCarousel({
+		main: '.companies-wrapper',
+		wrap: '.companies-hor',
+		slidesToShow : 4,
+		infinity: true,
+		responsive: [
+			{
+			breakpoint: 1024,
+			slidesToShow: 3
+			},
+			{
+			breakpoint: 768,
+			slidesToShow: 2
+			},
+			{
+			breakpoint: 576,
+			slidesToShow: 1
+			},
+	]
+	});
+
+	carousel.init();
+</script>
 </body>
 </html>
